<resources>
    <string name="app_name">Roadwatch</string>
    <string name="app_description">Roadwatch is used to report any dangerous behavior performed by other vehicals on the road. By using this application as
        often as possible we hope to make our roads safer and to discourage life threatening behavior.</string>
    <string name="crash_toast_text">Oooops! Roadwatch has crashed, a report will be sent to the RnD team</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Car Number</string>
    <string name="tap_to_send">Tap to edit and send</string>
    <string name="integrated_with_nav_app">Integrated with navigation app</string>
    <string name="no_unsent_reports">No unsent reports to display</string>
    <string name="notification_warning_title">RoadWatch Warning</string>
    <string name="notification_error_title">RoadWatch Error</string>
    <string name="notification_report_error_title">RoadWatch report failed</string>
    <string name="splash_title">Roadwatch</string>
    <string name="login_wizard_title">Login Wizard</string>
    <string name="login_wizard_step1_title">Welcome to Roadwatch!</string>
    <string name="login_wizard_step1_message">You\'re just 2 steps away from becoming a Roadwatcher!</string>
    <string name="login_wizard_logo_content_description">Roadwatch Logo</string>
    <string name="login_wizard_step2_title">Step 1 - License Plate</string>
	<string name="fake_license_plate_detected">Please use your REAL license plate</string>
	<string name="license_plate_hint">XX-XXX-XX</string>
	<string name="login_wizard_step_2_question_text">Why do you need my license plate?</string>
	<string name="login_wizard_step2_dialog_title">License Plate</string>
	<string name="login_wizard_step2_explanation_text">We need your license plate to send you real-time notifications when you are reported and identify you as the car owner (preventing others from taking false ownership on your car).\n\nImportant: We will never expose your license plate to anyone.</string>
    <string name="login_wizard_step3_title">Step 2 - Sign in</string>
    <string name="login_wizard_step3_help">* Did you forget your password ?\n* Do you suspect someone else has already registered with your license plate?\n\nContact support@roadwatchapp.com for help</string>
    <string name="login_wizard_step3_name_error">Name is too short</string>
    <string name="login_wizard_step3_email_error">Please provide a valid e-mail address</string>
    <string name="login_wizard_step3_password_error">Password is too short</string>
    <string name="login_wizard_step3_verify_password_error">Password not verified</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New password</string>
    <string name="verify_password_hint">Verify password</string>
    <string name="edit_user_account_title">Edit user account</string>
    <string name="edit_user_account">User account</string>
    <string name="updated_user_account">User account updated successfully</string>
    <string name="db_failed_to_login_user">Failed login user on server</string>
    <string name="bad_credentails">Wrong user credentials for registered license plate</string>
    <string name="bad_login_token">Please register again</string>
    <string name="license_plate_already_exist">License plate already exists</string>
    <string name="db_failed_to_store_user">Failed to store user</string>
    <string name="db_failed_to_add_report">Failed to add report</string>
    <string name="db_failed_to_get_reports">Failed to get reports</string>
    <string name="cannot_remove_report_reported_by_others">Cannot remove a report that was reported by others</string>
    <string name="report_too_frequent_error">Cannot report the same car too frequently! (%1$s)</string>
    <string name="connection_timeout">Failed to connect to server</string>
    <string name="failed_to_parse_data_from_server">Failed to parse data from server</string>
    <string name="failed_to_register_user_with_gcm">Failed to register user with google servers</string>
    <string name="unexpected_server_error">Unexpected server error</string>
    <string name="reports">Reports</string>
    <string name="search">Search</string>
    <string name="tracked_cars">Tracked Cars</string>
    <string name="sharing">Sharing</string>
    <string name="tap_here_to_sign_in">Tap here to sign in!</string>
    <string name="signed_in_message">%1$s (%2$s)</string>
    <string name="exit_dialog_title">Exit without sending?</string>
    <string name="exit_dialog_message_single">There is 1 unsent report</string>
    <string name="exit_dialog_message_multiple">There are %1$d unsent reports</string>
    <string name="exit_dialog_exit_button">Exit</string>
    <string name="exit_dialog_cancel_button">Cancel</string>
    <string name="report">Report now!</string>
    <string name="unsent_reports">Unsent reports</string>
    <string name="sent_reports">Sent reports</string>
    <string name="my_record">My record</string>
    <string name="content_description_lp_extension">License plate type</string>
    <string name="content_description_lp_action_button">License plate action button</string>
    <string name="title_activity_report">Report</string>
    <string name="location_found">Location saved</string>
    <string name="lp_title">License Plate:</string>
    <string name="no_gps_reception">No GPS signal</string>
    <string name="action_description">Description:</string>
    <string name="send_report_button">Send</string>
    <string name="save_report_button">Save</string>
    <string name="close_report_button">Close</string>
    <string name="danger_button1">Hazard</string>
    <string name="danger_button2">Danger</string>
    <string name="danger_button3">Threat</string>
    <string name="sending_report">Sending report&#8230;</string>
    <string name="reporting_self_error">It is not allowed to report on yourself!</string>
    <string name="reporting_excessivly_error">Excessive reporting is not allowed!</string>
    <string name="report_sent">Report sent</string>
    <string name="report_deleted">Report deleted</string>
    <string name="saved_report">Report saved</string>
    <string name="no_address_found">no address</string>
    <string name="no_geocoder_available">Cannot resolve address. No geocoder available.</string>
    <string name="speak_button">Speak</string>
    <string name="say_license_plate">Say license plate now</string>
    <string name="say_license_plate_again">I heard %1$s, please try again</string>
    <string name="send_report_error">Failed to send report</string>
    <string name="send_report_general_error_short">Failed to send report due to server problems</string>
    <string name="send_report_general_error_long">Due to server problems the report was not sent but was saved. Please try to send the report again later</string>
    <string name="unregistered_user_cannot_send">Only registered users can send reports!</string>
    <string name="report_wizard_step_title">Getting Started %1$d of 4</string>
    <string name="report_wizard_step1">Type the license plate</string>
    <string name="report_wizard_step2">Or simply touch and say it!</string>
    <string name="report_wizard_step3">Select the report description</string>
    <string name="report_wizard_step4">Send it!</string>
    <string name="title_activity_unsent_reports">Unsent Reports</string>
    <string name="unresolved_address">Location saved without address</string>
    <string name="action_discard">Delete</string>
    <string name="action_map">Map</string>
    <string name="unsent_reports_notice">* Unsent reports are kept for only 24 hours</string>
    <string name="title_activity_sent_reports">Reports sent</string>
    <string name="no_send_reports">No reports</string>
    <string name="last_24_hours_reports">Last 24 hours</string>
    <string name="older_reports">Older</string>
    <string name="title_activity_edit_report">Edit Report</string>
    <string name="title_activity_fix_report">Fix Report</string>
    <string name="title_activity_view_report">View Report</string>
    <string name="report_send_cancelled">Sending report cancelled</string>
    <string name="report_update_cancelled">Updating report cancelled</string>
    <string name="report_updated">Report updated successfully</string>
    <string name="report_cannot_remove">Cannot remove report that was witnessed by other people</string>
    <string name="no_search_results">No reports found</string>
    <string name="no_sharing_requests">No sharing requests</string>
    <string name="list_summary">%1$d reports found</string>
    <string name="action_search_fav">Search favourites</string>
    <string name="no_tracked_cars">No tracked cars</string>
    <string name="add_tracked_car_description">I\'d like to receive real-time report notifications on the following car:</string>
    <string name="edit_tracked_car_dialog_title">Edit Tracked Car</string>
    <string name="tracked_car_name">%1$s\'s car:</string>
    <string name="add_tracked_car_button">Add car</string>
    <string name="add_tracked_car_title">Add Tracked Car</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="tracked_name_hint">Name</string>
    <string name="tracked_license_plate_hint">License plate</string>
    <string name="tracked_license_plate_already_exists">You are already tracking this car</string>
    <string name="tracking_own_license_plate">You are already receiving notifications for your own car</string>
    <string name="tracked_info_invalid">Please use a valid name and license plate</string>
    <string name="tracked_cars_available">Tracked cars available: %1$d</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_canclled">Purchase Cancelled</string>
    <string name="add_tracked_car_wizard_step1_title">Adding a tracked car</string>
    <string name="add_tracked_car_wizard_step_1_text">* A tracked car is a car you wish to receive real time notifications each time it\'s reported\n* You don\'t need to track your own car since you are already getting notifications for it</string>
    <string name="title_activity_map_for">Reports map for %1$s</string>
    <string name="title_activity_map">Reports map</string>
    <string name="notification_reported_title">You were RoadWatched!</string>
    <string name="notification_reported_at">at&#160;</string>
    <string name="notification_report_blocked_title">RoadWatch protected you!</string>
    <string name="notification_report_blocked_short">A report sent for you was reject</string>
    <string name="notification_report_blocked_long">A report send for you was reject because the system has detected you were not present at the scene</string>
    <string name="notification_report_good_title">Good Work!</string>
    <string name="notification_report_witness_short">Your report was witnessed by others!</string>
    <string name="notification_report_witness_long">Your report was also witnessed and reported by a fellow road watcher!</string>
    <string name="notification_tracked_car_reported_title">%1$s was reported!</string>
    <string name="action_previous">Back</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_floating_report_button">FloatingReportButtonActivity</string>
</resources>