<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/license_plate_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@drawable/lp_border"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:paddingTop="2dp" >

    <ImageView
        android:id="@+id/lp_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_lp_extension"
        android:src="@drawable/lp_ext_isr"
        android:text="@string/danger_button3" />

    <com.roadwatch.app.widgets.LicensePlateEditText
        android:id="@+id/license_plate"
        style="@style/Widget.LicensePlate.EditText.Style"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"
        android:layout_weight="6"
        android:ems="9"
        android:hint="@string/license_plate_hint"
        android:inputType="phone"
        android:maxLength="9"
        android:maxLines="1"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="monospace" >

        <requestFocus />
    </com.roadwatch.app.widgets.LicensePlateEditText>

    <ImageButton
        android:id="@+id/action_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:background="@drawable/transparent_button_selector"
        android:contentDescription="@string/content_description_lp_action_button"
        android:paddingRight="4dp"
        android:src="@drawable/ic_action_mic" />

</LinearLayout>