<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/holo_text"
        android:id="@+id/welcomeText"
        android:text="@string/login_wizard_step1_title"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="26sp" 
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:contentDescription="@string/login_wizard_logo_content_description"
        android:src="@drawable/rw_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="16"       
        android:gravity="top"
        android:id="@+id/welcomeMessage"
        android:text="@string/login_wizard_step1_message"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />
</LinearLayout>
