<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/tracked_name_hint"
        android:inputType="textPersonName"
        android:maxLength="25" >

    </EditText>

    <EditText
        android:id="@+id/new_tracked_license_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name"
        android:ems="9"
        android:maxLength="9"
        android:inputType="phone"
        android:hint="@string/tracked_license_plate_hint" />

    <Button
        android:id="@+id/tracked_car_update_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:paddingBottom="2dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/new_tracked_license_plate"
        android:layout_below="@+id/new_tracked_license_plate"
        android:text="@string/update" />

    <Button
        android:id="@+id/tracked_car_remove_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingBottom="2dp"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/tracked_car_update_button"
        android:layout_alignBottom="@+id/tracked_car_update_button"
        android:layout_alignRight="@+id/new_tracked_license_plate"
        android:layout_toRightOf="@+id/tracked_car_update_button"
        android:text="@string/remove" />

</RelativeLayout>