<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roadwatch.app.report.ReportActivity" >

    <TextView
        android:id="@+id/lp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/license_plate_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/lp_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textDirection="rtl" />

    <include
        android:id="@+id/license_plate_layout"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/lp_title"
        layout="@layout/license_plate_edit_text_layout" />

    <TextView
        android:id="@+id/report_description"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nested_linear_layout"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/action_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/license_plate_layout"
        android:layout_marginTop="27dp"
        android:text="@string/action_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textDirection="rtl" />

    <TextView
        android:id="@+id/location_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/report_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textDirection="rtl" />

    <LinearLayout
        android:id="@+id/nested_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/action_description_label"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/danger_button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1.2"
            android:drawableTop="@drawable/danger3"
            android:text="@string/danger_button3" />

        <Button
            android:id="@+id/danger_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:drawableTop="@drawable/danger2"
            android:text="@string/danger_button2" />

        <Button
            android:id="@+id/danger_button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:drawableTop="@drawable/danger1"
            android:text="@string/danger_button1" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/send_report_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/report_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:onClick="sendOrSaveReport"
        android:text="@string/save_report_button"
        android:textSize="28sp" />

    <Button
        android:id="@+id/remove_report_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/report_button"
        android:layout_alignBottom="@+id/report_button"
        android:layout_alignParentRight="true"
        android:layout_width="150dp"
        android:onClick="removeReport"
        android:text="@string/action_discard"
        android:visibility="gone"
        android:textSize="28sp" />

</RelativeLayout>