<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:background="#00000000"
    tools:context="com.roadwatch.app.report.ReportsFragment" >

	<Button
        android:id="@+id/report_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_above="@+id/unsent_reports_button"
        android:layout_width="280dp"
        android:onClick="report"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:text="@string/report" />

    <Button
        android:id="@+id/unsent_reports_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_above="@+id/sent_reports_button"
        android:layout_alignLeft="@+id/report_button"
        android:layout_alignRight="@+id/report_button"
        android:layout_marginBottom="8dp"
        android:onClick="showUnsentReports"
        android:text="@string/unsent_reports"
        android:textSize="28sp" />

    <Button
        android:id="@+id/sent_reports_button"
        style="@style/RoadWatchButtonStyle"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignLeft="@+id/unsent_reports_button"
        android:layout_alignRight="@+id/unsent_reports_button"
        android:onClick="showSentReports"
        android:text="@string/sent_reports"
        android:textSize="28sp" />
    
    <Button
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#21dbd4" />

</RelativeLayout>